# soundterm

./: .gitignore  LICENSE  pyproject.toml
src/soundterm/: acoustid.py  cli.py  libray.py  metadata.py  models.py  settings.py
src/soundterm/cli/: __init__.py  _cli.py
src/soundterm/enrichment/: __init__.py  _library.py  _metadata.py
src/soundterm/models/: __init__.py  _acoustid.py  _models.py  _tags.py  acoustid.py  song.py  track.py
src/soundterm/utils/: __init__.py  _database.py  _filename_parser.py  _functions.py  database.py  filename_parser.py
tests/data/: result.json
