[project]
name = "soundterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mitchell Smith", email = "zephyrthenoble@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "audioread>=3.1.0",
    "deepdiff>=8.6.1",
    "librosa>=0.11.0",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pyacoustid>=1.3.0",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.32",
    "textual>=7.5.0",
]

[project.scripts]
soundterm = "soundterm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
